--- a/lotto/lotto.html
+++ b/lotto/lotto.html
@@ -6,7 +6,7 @@
     *생성자: 장승배
     *생성일자: 2021.10.20
     *최종수정일자: 2021.12.06
-    *최종수정자: 유형주
+    *최종수정자: 유형주, 양성부, 
     *최종수정내용: css 적용 클래스 최종 수정
     --------------------------------------------------------------------------------------
     *내용: html과 자바스크립트 로 작성됨
